--- a/public/subscribe_styles.css
+++ b/public/subscribe_styles.css
@@ -5,17 +5,27 @@ body {
 
 body {
   display: flex;
-  align-items: center;
+  align-items: left;
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #f5f5f5;
+  color: #F9F3F3;
+  background-color: black;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.heading {
+  font-size: 3rem;
+}
+
+p {
+  font-family: 'Esteban', 'Times New Roman', serif;
 }
 
 .form-signin {
   width: 100%;
   max-width: 330px;
   padding: 15px;
-  margin: auto;
+  margin-left: 100px;
 }
 
 .form-signin .checkbox {
@@ -23,7 +33,7 @@ body {
 }
 
 .form-signin .form-floating:focus-within {
-  z-index: 2;
+  z-index: 1;
 }
 
 .top {
@@ -40,4 +50,12 @@ body {
 
 .middle {
   border-radius: 0;
+}
+
+.form-control {
+  margin: 2% 0;
+}
+
+.subscribe-btn {
+  font-family: Arial, Helvetica, sans-serif;
 }
