--- a/public/subscribe_styles.css
+++ b/public/subscribe_styles.css
@@ -15,6 +15,7 @@ body {
 
 .heading {
   font-size: 3rem;
+  font-family: 'Open Sans', sans-serif;
 }
 
 p {
@@ -23,17 +24,13 @@ p {
 
 .form-signin {
   width: 100%;
-  max-width: 330px;
+  max-width: 500px;
   padding: 15px;
   margin-left: 100px;
 }
 
-.form-signin .checkbox {
-  font-weight: 400;
-}
-
 .form-signin .form-floating:focus-within {
-  z-index: 1;
+  z-index: 0.5;
 }
 
 .top {
@@ -58,4 +55,9 @@ p {
 
 .subscribe-btn {
   font-family: Arial, Helvetica, sans-serif;
+}
+
+::placeholder {
+  color: black;
+  opacity: 0.75;
 }
