--- a/views/header.ejs
+++ b/views/header.ejs
@@ -46,7 +46,27 @@
     <!-- Custom styles for this template -->
     <link href="https://fonts.googleapis.com/css?family=Playfair&#43;Display:700,900&amp;display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Esteban&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="css/styles.css" rel="stylesheet">
   </head>
 
+  <body>
+    <div class="container header-container">
+        <header class="blog-header py-3">
+          <div class="row flex-nowrap justify-content-between align-items-end">
+            <div class="col-4 pt-1">
+            </div>
+            <div class="col-4 text-center">
+              <a class="blog-header-logo" href="#">my canvas</a>
+            </div>
+            <div class="col-4 d-flex justify-content-end align-items-center">
+              <a class="link-secondary" href="#" aria-label="Search">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24"><title>Search</title><circle cx="10.5" cy="10.5" r="7.5"/><path d="M21 21l-5.2-5.2"/></svg>
+              </a>
+              <input type="submit" value = "Subscribe" class="btn btn-outline-light">
+            </div>
+          </div>
+        </header>
+    </div>
