--- a/views/blogpost_template.ejs
+++ b/views/blogpost_template.ejs
@@ -8,7 +8,11 @@
             </h3>
             <article class="blog-post">
                 <h1 class="blog-post-title fst-italic">  <%= titleOfToday %> </h1>
+                <p class="blog-post-meta">January 1, 2021 by Mridula</p>
+
+                <p> <%=  contentOfToday %> </p>
             </article>
+            <hr>
            </div>
         </div>
     </main>
