--- a/views/header.ejs
+++ b/views/header.ejs
@@ -65,7 +65,9 @@
               <a class="link-secondary" href="#" aria-label="Search">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24"><title>Search</title><circle cx="10.5" cy="10.5" r="7.5"/><path d="M21 21l-5.2-5.2"/></svg>
               </a>
-              <input type="submit" value = "Subscribe" class="btn btn-outline-light">
+              <form action="/subscribe" method="GET">
+                <input type="submit" value = "Subscribe" class="btn btn-outline-light">
+              </form>
             </div>
           </div>
         </header>
