--- a/views/empty_template.ejs
+++ b/views/empty_template.ejs
@@ -3,11 +3,11 @@
     <main class="container">
         <h1>Compose</h1>
         <form action="/compose" method="POST">
-            <input type="text" name="title" placeholder="Title">
+            <input type="text" name="postTitle" placeholder="Title">
             <br>
-            <textarea name="content" cols="90" rows="20"></textarea>
+            <textarea name="postBody" cols="90" rows="20"></textarea>
             <br>
-            <button type="submit"> Publish </button>
+            <button type="submit" class="btn btn-outline-light"> Publish </button>
         </form>
     </main>
 </body>
