--- a/views/blogpost_template.ejs
+++ b/views/blogpost_template.ejs
@@ -22,12 +22,12 @@
           <p class="mb-0">Hi! With a cluttered mind, I jot down my ideas here. You'll find random topics - articles about the books I read or songs I heard, opinions about content, or some daily epiphanies and learning about navigating life as a young adult. Hope you enjoy!</p>
         </div>
 
-        <div class="p-4">
+        <!-- <div class="p-4">
           <h4>Archives</h4>
           <ol class="list-unstyled mb-0">
             <li><a href="#">New Blogpost</a></li>
           </ol>
-        </div>
+        </div> -->
 
         <div class="p-4">
           <h4 class="fst-italic">Elsewhere</h4>
