--- a/views/header.ejs
+++ b/views/header.ejs
@@ -48,6 +48,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Esteban&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="/css/styles.css" rel="stylesheet">
   </head>
