Single post showing up on homescreen and archive

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -130,6 +130,9 @@ a:link, a:visited, a:link:active, a:visited:active {
   .archive-links {
     font-family: 'Open Sans', sans-serif;
   }
+  .p-4 h4{
+    text-decoration: underline;
+  }
   
   /*
    * Footer
