--- a/views/empty_template.ejs
+++ b/views/empty_template.ejs
@@ -4,6 +4,7 @@
         <h1>Compose</h1>
         <form action="/compose" method="POST">
             <input type="text" name="postTitle" placeholder="Title">
+            <input type="text" name="postId" id="" placeholder="id">
             <br>
             <textarea name="postBody" cols="90" rows="20"></textarea>
             <br>
