--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -130,10 +130,15 @@ a:link, a:visited, a:link:active, a:visited:active {
   .archive-links {
     font-family: 'Open Sans', sans-serif;
   }
-  .p-4 h4{
-    text-decoration: underline;
+  .cards-layout{
+    padding: 5%;
   }
-  
+  .pricing-card {
+    padding: 3% 2%;
+  }
+  .title, .content{
+    color : black;
+  }
   /*
    * Footer
    */
